# rust_gpt

./: .gitignore  Cargo.toml  README.md  items.jsonl
src/: animated_text_box.rs  car.rs  cmp_position.rs  drawable.rs  game.rs  game_object.rs  gpt.rs  gpt_message.rs  gpt_request.rs  gpt_response.rs  main.rs  sys_print_position.rs  updatable.rs
