[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-watch = "8.4.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
raylib = "3.5.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
specs = "0.20.0"
rodio = "0.17.2"
image = "0.24.7"
base64 = "0.21.5"
uuid = { version = "1.6.1", features = ["fast-rng", "v4", "macro-diagnostics"] }
